had not added the recipe options in a list, looked stupid.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <h1>
         ODIN RECIPES
     </h1>
-    <a href="recipes/bisibelebath.html">Bisibelebath</a>
-    <a href="recipes/eggs.html">Sunny Eggs</a>
+    <ul>
+    <li><a href="recipes/bisibelebath.html">Bisibelebath</a></li>
+    <li><a href="recipes/eggs.html">Sunny Eggs</a></li>
+    </ul>
 </body>
 </html>
